# Aalto_MS_Thesis

./: .gitignore  PROJECT_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RUNNING_COMMANDS.md  RUNNING_PROJECT.md  demo_trading.py  live_trading.py  main_live.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
backtest/: main.py
backtest/strategies/: cross_over.py
backtest/utils/: data_loader.py
config/: symbols_config.yaml
mt5_trading/adapters/: data.py  strategy.py  trader.py
mt5_trading/domain/: __init__.py  mt5_connection.py  multi_symbol_manager.py  risk_manager.py  signal.py  trader.py  volatility_analyzer.py
mt5_trading/robot/: cross_over_robot.py  multi_symbol_robot.py
quant_rl/: README.md  __init__.py
quant_rl/backtest/: account.py  broker.py  costs.py  engine.py  guardrails.py  risk.py
quant_rl/baselines/: buy_and_hold.py  rule_based.py
quant_rl/config/: __init__.py  default.yaml
quant_rl/data/: align.py  clean.py  loader.py  pipeline.py  resample.py  session.py  split.py  ticks.py
quant_rl/envs/: reward.py  trading_env.py
quant_rl/eval/: chart_indicators.py  eval_run.py  export.py  metrics.py  plots.py  plots_interactive.py  replot_orders.py  (+5 more)
scripts/: discover_symbols.py  prepare_data.py
tests/: conftest.py  test_backtest_engine_events.py  test_causal_features.py  test_cost_model.py  test_data_split.py  test_guardrails.py  test_macd_baseline.py  test_plots_export.py  test_reward.py  test_risk.py  test_rollout.py  test_session_filter.py  test_structure.py  test_ticks.py  test_trade_metrics.py  test_training_plots.py
(+19 files in other folders)
