[project]
name = "quant-rl-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting==0.3.3",
    "backtrader>=1.9.78.123",
    "bokeh==3.8.0",
    "build==1.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cython==3.1.4",
    "jinja2==3.1.6",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.6",
    "metatrader5==5.0.5260; sys_platform == 'win32'",
    "narwhals==2.5.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandas-ta==0.4.71b0",
    "pillow==11.3.0",
    "plotly==5.18.0",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "ta-lib==0.6.7",
    "tenacity==9.1.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "win32-setctime==1.2.0; sys_platform == 'win32'",
    "xyzservices==2025.4.0",
    "yfinance>=0.2.66",
    # quant-rl additions
    "torch>=2.2",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "pyarrow>=15.0",
    "omegaconf>=2.3",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_rl"]
